force-app/main/default/objects/Transaction_Log__c/fields/Actual_Restart__c.field-meta.xml
<CustomField>
        <fullName>Actual_Restart__c</fullName>
        <label>Actual Restart</label>
        <type>Date</type>
    </CustomField>