force-app/main/default/objects/Transaction_Log__c/fields/Actual_Start__c.field-meta.xml
<CustomField>
        <fullName>Actual_Start__c</fullName>
        <label>Actual Start</label>
        <type>Date</type>
    </CustomField>