force-app/main/default/objects/Transaction_Log__c/fields/Alias_Account__c.field-meta.xml
<CustomField>
        <fullName>Alias_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alias Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transaction Logs (Alias Account)</relationshipLabel>
        <relationshipName>Transaction_Logs1</relationshipName>
        <type>Lookup</type>
    </CustomField>