force-app/main/default/objects/Transaction_Log__c/fields/Alias_Code__c.field-meta.xml
<CustomField>
        <fullName>Alias_Code__c</fullName>
        <label>Alias Code</label>
        <length>15</length>
        <type>Text</type>
    </CustomField>