force-app/main/default/objects/Transaction_Log__c/fields/Attn_line__c.field-meta.xml
<CustomField>
        <fullName>Attn_line__c</fullName>
        <label>Attn_line</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>