force-app/main/default/objects/Transaction_Log__c/fields/Bill_Cycle__c.field-meta.xml
<CustomField>
        <fullName>Bill_Cycle__c</fullName>
        <label>Bill Cycle</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>