force-app/main/default/objects/Transaction_Log__c/fields/Bill_to_Supp2__c.field-meta.xml
<CustomField>
        <fullName>Bill_to_Supp2__c</fullName>
        <label>Bill to Supp2</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>