force-app/main/default/objects/Transaction_Log__c/fields/Browse__c.field-meta.xml
<CustomField>
        <fullName>Browse__c</fullName>
        <label>Browse</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>