force-app/main/default/objects/Transaction_Log__c/fields/Call_Back__c.field-meta.xml
<CustomField>
        <fullName>Call_Back__c</fullName>
        <label>Call Back</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>