force-app/main/default/objects/Transaction_Log__c/fields/Call_Sub__c.field-meta.xml
<CustomField>
        <fullName>Call_Sub__c</fullName>
        <formula>Transaction_Type__r.Call_Subscriber__c</formula>
        <label>Call Sub</label>
        <type>Checkbox</type>
    </CustomField>