force-app/main/default/objects/Transaction_Log__c/fields/Cancelled__c.field-meta.xml
<CustomField>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This transaction has been cancelled</description>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </CustomField>