force-app/main/default/objects/Transaction_Log__c/fields/Case__c.field-meta.xml
<CustomField>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Transaction Logs</relationshipLabel>
        <relationshipName>Transaction_Logs</relationshipName>
        <type>Lookup</type>
    </CustomField>