force-app/main/default/objects/Transaction_Log__c/fields/Category__c.field-meta.xml
<CustomField>
        <fullName>Category__c</fullName>
        <description>The Category of this transaction</description>
        <label>Category</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>