force-app/main/default/objects/Transaction_Log__c/fields/Clear_Restart_Date__c.field-meta.xml
<CustomField>
        <fullName>Clear_Restart_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clear Restart Date</label>
        <type>Checkbox</type>
    </CustomField>