force-app/main/default/objects/Transaction_Log__c/fields/Code_Name__c.field-meta.xml
<CustomField>
        <fullName>Code_Name__c</fullName>
        <formula>Transaction_Type__r.Name</formula>
        <label>Code Name</label>
        <type>Text</type>
    </CustomField>