force-app/main/default/objects/Transaction_Log__c/fields/Complaint_Code__c.field-meta.xml
<CustomField>
        <fullName>Complaint_Code__c</fullName>
        <formula>Transaction_Type__r.Code__c</formula>
        <label>Complaint Code</label>
        <type>Text</type>
    </CustomField>