force-app/main/default/objects/Transaction_Log__c/fields/Contact__c.field-meta.xml
<CustomField>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transaction Logs</relationshipLabel>
        <relationshipName>Transaction_Logs</relationshipName>
        <type>Lookup</type>
    </CustomField>