force-app/main/default/objects/Transaction_Log__c/fields/Contact_Date__c.field-meta.xml
<CustomField>
        <fullName>Contact_Date__c</fullName>
        <label>Contact Date</label>
        <type>Date</type>
    </CustomField>