force-app/main/default/objects/Transaction_Log__c/fields/Copies__c.field-meta.xml
<CustomField>
        <fullName>Copies__c</fullName>
        <label>Copies</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>