force-app/main/default/objects/Transaction_Log__c/fields/Coupon__c.field-meta.xml
<CustomField>
        <fullName>Coupon__c</fullName>
        <label>Coupon</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>