force-app/main/default/objects/Transaction_Log__c/fields/Deleted__c.field-meta.xml
<CustomField>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Transaction</label>
        <type>Checkbox</type>
    </CustomField>