force-app/main/default/objects/Transaction_Log__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Address</label>
        <referenceTo>Delivery_Address__c</referenceTo>
        <relationshipLabel>Transaction Logs</relationshipLabel>
        <relationshipName>Transaction_Logs</relationshipName>
        <type>Lookup</type>
    </CustomField>