force-app/main/default/objects/Transaction_Log__c/fields/Delivery_Code3__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Code3__c</fullName>
        <label>Delivery Code3</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>