force-app/main/default/objects/Transaction_Log__c/fields/Delivery_Inst__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Inst__c</fullName>
        <label>Delivery Instruction</label>
        <type>TextArea</type>
    </CustomField>