force-app/main/default/objects/Transaction_Log__c/fields/Dispatch_Date__c.field-meta.xml
<CustomField>
        <fullName>Dispatch_Date__c</fullName>
        <label>Dispatch Date</label>
        <type>Date</type>
    </CustomField>