force-app/main/default/objects/Transaction_Log__c/fields/Dispatch_Notes__c.field-meta.xml
<CustomField>
        <fullName>Dispatch_Notes__c</fullName>
        <label>Dispatch Notes</label>
        <type>TextArea</type>
    </CustomField>