force-app/main/default/objects/Transaction_Log__c/fields/Dispatch_Status__c.field-meta.xml
<CustomField>
        <fullName>Dispatch_Status__c</fullName>
        <label>Dispatch Status</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>