force-app/main/default/objects/Transaction_Log__c/fields/DSI_Account__c.field-meta.xml
<CustomField>
        <fullName>DSI_Account__c</fullName>
        <formula>Subscription__r.DSI_Subscription_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSI Account</label>
        <type>Text</type>
    </CustomField>