force-app/main/default/objects/Transaction_Log__c/fields/DSI_Created_By__c.field-meta.xml
<CustomField>
        <fullName>DSI_Created_By__c</fullName>
        <label>DSI Created By</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>