force-app/main/default/objects/Transaction_Log__c/fields/Email_Bill__c.field-meta.xml
<CustomField>
        <fullName>Email_Bill__c</fullName>
        <label>Email Bill</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>