force-app/main/default/objects/Transaction_Log__c/fields/Email_Confirm__c.field-meta.xml
<CustomField>
        <fullName>Email_Confirm__c</fullName>
        <label>Email Confirm</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>