force-app/main/default/objects/Transaction_Log__c/fields/Email_Promotion__c.field-meta.xml
<CustomField>
        <fullName>Email_Promotion__c</fullName>
        <label>Email Promotion</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>