force-app/main/default/objects/Transaction_Log__c/fields/Email_Row_Id__c.field-meta.xml
<CustomField>
        <fullName>Email_Row_Id__c</fullName>
        <label>Email Row Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>