force-app/main/default/objects/Transaction_Log__c/fields/Entry_Date__c.field-meta.xml
<CustomField>
        <fullName>Entry_Date__c</fullName>
        <label>Entry Date</label>
        <type>Date</type>
    </CustomField>