force-app/main/default/objects/Transaction_Log__c/fields/Error_Msg__c.field-meta.xml
<CustomField>
        <fullName>Error_Msg__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </CustomField>