force-app/main/default/objects/Transaction_Log__c/fields/Expire_Balance__c.field-meta.xml
<CustomField>
        <fullName>Expire_Balance__c</fullName>
        <description>Balance after this transation is posted</description>
        <label>Expire Balance</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>