force-app/main/default/objects/Transaction_Log__c/fields/First_Date__c.field-meta.xml
<CustomField>
        <fullName>First_Date__c</fullName>
        <label>First Date</label>
        <type>Date</type>
    </CustomField>