force-app/main/default/objects/Transaction_Log__c/fields/Internet_Trans__c.field-meta.xml
<CustomField>
        <fullName>Internet_Trans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internet Transaction</label>
        <type>Checkbox</type>
    </CustomField>