force-app/main/default/objects/Transaction_Log__c/fields/Is_First_Date__c.field-meta.xml
<CustomField>
        <fullName>Is_First_Date__c</fullName>
        <formula>First_Date__c =  TODAY()</formula>
        <label>Is First Date</label>
        <type>Checkbox</type>
    </CustomField>