force-app/main/default/objects/Transaction_Log__c/fields/Is_Last_Date__c.field-meta.xml
<CustomField>
        <fullName>Is_Last_Date__c</fullName>
        <formula>Last_Date__c =  TODAY()</formula>
        <label>Is Last Date</label>
        <type>Checkbox</type>
    </CustomField>