force-app/main/default/objects/Transaction_Log__c/fields/Is_Manual__c.field-meta.xml
<CustomField>
        <fullName>Is_Manual__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Manual</label>
        <type>Checkbox</type>
    </CustomField>