force-app/main/default/objects/Transaction_Log__c/fields/IVR_Trans__c.field-meta.xml
<CustomField>
        <fullName>IVR_Trans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IVR Transaction</label>
        <type>Checkbox</type>
    </CustomField>