force-app/main/default/objects/Transaction_Log__c/fields/Memo__c.field-meta.xml
<CustomField>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </CustomField>