force-app/main/default/objects/Transaction_Log__c/fields/Message__c.field-meta.xml
<CustomField>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </CustomField>