force-app/main/default/objects/Transaction_Log__c/fields/MF_Copies__c.field-meta.xml
<CustomField>
        <fullName>MF_Copies__c</fullName>
        <label>MF Copies</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>