force-app/main/default/objects/Transaction_Log__c/fields/Nie_Donate__c.field-meta.xml
<CustomField>
        <fullName>Nie_Donate__c</fullName>
        <label>Nie Donate</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>