force-app/main/default/objects/Transaction_Log__c/fields/Number_Copy__c.field-meta.xml
<CustomField>
        <fullName>Number_Copy__c</fullName>
        <label>Number Copy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>