force-app/main/default/objects/Transaction_Log__c/fields/Offer_Product__c.field-meta.xml
<CustomField>
        <fullName>Offer_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer Product</label>
        <referenceTo>Offer_Product__c</referenceTo>
        <relationshipLabel>Transaction Logs</relationshipLabel>
        <relationshipName>Transaction_Logs</relationshipName>
        <type>Lookup</type>
    </CustomField>