force-app/main/default/objects/Transaction_Log__c/fields/Pap_Web_Row__c.field-meta.xml
<CustomField>
        <fullName>Pap_Web_Row__c</fullName>
        <label>Pap Web Row</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>