force-app/main/default/objects/Transaction_Log__c/fields/Paper_Code__c.field-meta.xml
<CustomField>
        <fullName>Paper_Code__c</fullName>
        <label>Paper Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>