force-app/main/default/objects/Transaction_Log__c/fields/Paper_Web_Row__c.field-meta.xml
<CustomField>
        <fullName>Paper_Web_Row__c</fullName>
        <label>Paper Web Row</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>