force-app/main/default/objects/Transaction_Log__c/fields/Prior_Address__c.field-meta.xml
<CustomField>
        <fullName>Prior_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prior Address</label>
        <referenceTo>Delivery_Address__c</referenceTo>
        <relationshipLabel>Transaction Logs (Prior Address)</relationshipLabel>
        <relationshipName>Transaction_Logs1</relationshipName>
        <type>Lookup</type>
    </CustomField>