force-app/main/default/objects/Transaction_Log__c/fields/Prior_Expire_Date__c.field-meta.xml
<CustomField>
        <fullName>Prior_Expire_Date__c</fullName>
        <description>Expire date prior to this transaction being posted</description>
        <label>Prior Expire Date</label>
        <type>Date</type>
    </CustomField>