force-app/main/default/objects/Transaction_Log__c/fields/Prior_Sunday__c.field-meta.xml
<CustomField>
        <fullName>Prior_Sunday__c</fullName>
        <label>Prior Sunday</label>
        <type>Date</type>
    </CustomField>