force-app/main/default/objects/Transaction_Log__c/fields/Prisun__c.field-meta.xml
<CustomField>
        <fullName>Prisun__c</fullName>
        <label>Prisun</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>