force-app/main/default/objects/Transaction_Log__c/fields/prod_code__c.field-meta.xml
<CustomField>
        <fullName>prod_code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>