force-app/main/default/objects/Transaction_Log__c/fields/Promo_Source__c.field-meta.xml
<CustomField>
        <fullName>Promo_Source__c</fullName>
        <label>Promo Source</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>