force-app/main/default/objects/Transaction_Log__c/fields/Promotion__c.field-meta.xml
<CustomField>
        <fullName>Promotion__c</fullName>
        <label>Promotion</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>