force-app/main/default/objects/Transaction_Log__c/fields/Pub__c.field-meta.xml
<CustomField>
        <fullName>Pub__c</fullName>
        <label>Pub</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>