force-app/main/default/objects/Transaction_Log__c/fields/Publist__c.field-meta.xml
<CustomField>
        <fullName>Publist__c</fullName>
        <label>Publist</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>