force-app/main/default/objects/Transaction_Log__c/fields/Rate__c.field-meta.xml
<CustomField>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>