force-app/main/default/objects/Transaction_Log__c/fields/Rate_Table__c.field-meta.xml
<CustomField>
        <fullName>Rate_Table__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Table</label>
        <referenceTo>Rate__c</referenceTo>
        <relationshipLabel>Transaction Logs</relationshipLabel>
        <relationshipName>Transaction_Logs</relationshipName>
        <type>Lookup</type>
    </CustomField>