force-app/main/default/objects/Transaction_Log__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </CustomField>