force-app/main/default/objects/Transaction_Log__c/fields/Recurly_Subscription__c.field-meta.xml
<CustomField>
        <fullName>Recurly_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>recurly_v2__Recurly_Subscription__c</referenceTo>
        <relationshipLabel>Transaction Logs</relationshipLabel>
        <relationshipName>Transaction_Logs</relationshipName>
        <type>Lookup</type>
    </CustomField>