force-app/main/default/objects/Transaction_Log__c/fields/Redelivery_Requested__c.field-meta.xml
<CustomField>
        <fullName>Redelivery_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redelivery Requested</label>
        <type>Checkbox</type>
    </CustomField>