force-app/main/default/objects/Transaction_Log__c/fields/Restart_Date__c.field-meta.xml
<CustomField>
        <fullName>Restart_Date__c</fullName>
        <label>Restart Date</label>
        <type>Date</type>
    </CustomField>