force-app/main/default/objects/Transaction_Log__c/fields/Restart_Memo__c.field-meta.xml
<CustomField>
        <fullName>Restart_Memo__c</fullName>
        <label>Restart Memo</label>
        <type>TextArea</type>
    </CustomField>