force-app/main/default/objects/Transaction_Log__c/fields/Restart_Source__c.field-meta.xml
<CustomField>
        <fullName>Restart_Source__c</fullName>
        <label>Restart Source</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>