force-app/main/default/objects/Transaction_Log__c/fields/Return_Msg__c.field-meta.xml
<CustomField>
        <fullName>Return_Msg__c</fullName>
        <label>Return Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>