force-app/main/default/objects/Transaction_Log__c/fields/Rollback_if_Err__c.field-meta.xml
<CustomField>
        <fullName>Rollback_if_Err__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rollback if Error</label>
        <type>Checkbox</type>
    </CustomField>