force-app/main/default/objects/Transaction_Log__c/fields/Route_Donate__c.field-meta.xml
<CustomField>
        <fullName>Route_Donate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Route Donate</label>
        <type>Checkbox</type>
    </CustomField>