force-app/main/default/objects/Transaction_Log__c/fields/Sat_Copies__c.field-meta.xml
<CustomField>
        <fullName>Sat_Copies__c</fullName>
        <label>Saturday Copies</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>