force-app/main/default/objects/Transaction_Log__c/fields/Send_Email__c.field-meta.xml
<CustomField>
        <fullName>Send_Email__c</fullName>
        <formula>Transaction_Type__r.SENDMSG__c</formula>
        <label>Send Email</label>
        <type>Checkbox</type>
    </CustomField>