force-app/main/default/objects/Transaction_Log__c/fields/Solicitor__c.field-meta.xml
<CustomField>
        <fullName>Solicitor__c</fullName>
        <label>Solicitor</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>