force-app/main/default/objects/Transaction_Log__c/fields/Source__c.field-meta.xml
<CustomField>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>