force-app/main/default/objects/Transaction_Log__c/fields/Stop_Date__c.field-meta.xml
<CustomField>
        <fullName>Stop_Date__c</fullName>
        <label>Stop Date</label>
        <type>Date</type>
    </CustomField>