force-app/main/default/objects/Transaction_Log__c/fields/Stop_Memo__c.field-meta.xml
<CustomField>
        <fullName>Stop_Memo__c</fullName>
        <label>Stop Memo</label>
        <type>TextArea</type>
    </CustomField>