force-app/main/default/objects/Transaction_Log__c/fields/Stop_Reason__c.field-meta.xml
<CustomField>
        <fullName>Stop_Reason__c</fullName>
        <label>Stop Reason</label>
        <type>TextArea</type>
    </CustomField>