force-app/main/default/objects/Transaction_Log__c/fields/Stop_Type__c.field-meta.xml
<CustomField>
        <fullName>Stop_Type__c</fullName>
        <label>Stop Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>