force-app/main/default/objects/Transaction_Log__c/fields/Subrates__c.field-meta.xml
<CustomField>
        <fullName>Subrates__c</fullName>
        <label>Subrates</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>