force-app/main/default/objects/Transaction_Log__c/fields/Subrec__c.field-meta.xml
<CustomField>
        <fullName>Subrec__c</fullName>
        <label>Subrec</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>