force-app/main/default/objects/Transaction_Log__c/fields/Sun_Copies__c.field-meta.xml
<CustomField>
        <fullName>Sun_Copies__c</fullName>
        <label>Sunday Copies</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>