force-app/main/default/objects/Transaction_Log__c/fields/Tag__c.field-meta.xml
<CustomField>
        <fullName>Tag__c</fullName>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>