force-app/main/default/objects/Transaction_Log__c/fields/Trans_Number__c.field-meta.xml
<CustomField>
        <fullName>Trans_Number__c</fullName>
        <label>Transaction Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>