force-app/main/default/objects/Transaction_Log__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
        <fullName>Transaction_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Type</label>
        <referenceTo>Transaction_Type__c</referenceTo>
        <relationshipLabel>Transaction Logs</relationshipLabel>
        <relationshipName>Transaction_Logs</relationshipName>
        <type>Lookup</type>
    </CustomField>