force-app/main/default/objects/Transaction_Log__c/fields/Transaction_Type_Name__c.field-meta.xml
<CustomField>
        <fullName>Transaction_Type_Name__c</fullName>
        <formula>Transaction_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Type Name</label>
        <type>Text</type>
    </CustomField>