force-app/main/default/objects/Transaction_Log__c/fields/Type_Name__c.field-meta.xml
<CustomField>
        <fullName>Type_Name__c</fullName>
        <formula>Transaction_Type__r.Type_Name__c</formula>
        <label>Type Name</label>
        <type>Text</type>
    </CustomField>