force-app/main/default/objects/Transaction_Log__c/fields/Verification__c.field-meta.xml
<CustomField>
        <fullName>Verification__c</fullName>
        <label>Verification</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>