force-app/main/default/objects/Transaction_Log__c/recordTypes/Complaint.recordType-meta.xml
<RecordType>
        <fullName>Complaint</fullName>
        <active>true</active>
        <label>Complaint</label>
    </RecordType>