force-app/main/default/objects/Transaction_Log__c/recordTypes/Message.recordType-meta.xml
<RecordType>
        <fullName>Message</fullName>
        <active>true</active>
        <label>Message</label>
    </RecordType>