force-app/main/default/objects/Transaction_Log__c/recordTypes/Termination.recordType-meta.xml
<RecordType>
        <fullName>Termination</fullName>
        <active>true</active>
        <label>Termination</label>
    </RecordType>