force-app/main/default/objects/Transaction_Log__c/recordTypes/Vacation.recordType-meta.xml
<RecordType>
        <fullName>Vacation</fullName>
        <active>true</active>
        <label>Vacation</label>
    </RecordType>