force-app/main/default/objects/Transaction_Log__c/recordTypes/Vacation_Hold.recordType-meta.xml
<RecordType>
        <fullName>Vacation_Hold</fullName>
        <active>true</active>
        <label>Vacation Hold</label>
    </RecordType>