force-app/main/default/objects/Transaction_Log__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>