force-app/main/default/objects/Transaction_Log__c/listViews/Vacation_Hold_and_Pack.listView-meta.xml
<ListView>
        <fullName>Vacation_Hold_and_Pack</fullName>
        <columns>NAME</columns>
        <columns>Subscription__c</columns>
        <columns>Category__c</columns>
        <columns>First_Date__c</columns>
        <columns>Last_Date__c</columns>
        <columns>Actual_Restart__c</columns>
        <columns>Actual_Start__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Name__c</field>
            <operation>startsWith</operation>
            <value>Vacation</value>
        </filters>
        <label>Vacation Hold and Pack</label>
    </ListView>