force-app/main/default/objects/Transaction_Log__c/listViews/Vacation_with_Restart.listView-meta.xml
<ListView>
        <fullName>Vacation_with_Restart</fullName>
        <columns>NAME</columns>
        <columns>Subscription__c</columns>
        <columns>Category__c</columns>
        <columns>First_Date__c</columns>
        <columns>Last_Date__c</columns>
        <columns>Actual_Restart__c</columns>
        <columns>Actual_Start__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Name__c</field>
            <operation>equals</operation>
            <value>Vacation with Restart</value>
        </filters>
        <label>Vacation with Restart</label>
    </ListView>